--- a/app/src/main/res/layout/activity_act1.xml
+++ b/app/src/main/res/layout/activity_act1.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".feature.lifecycle.Act1">
 
 
     <Button
-        android:id="@+id/btnLifeCycle"
+        android:id="@+id/btnOpen2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="LifeCycle" />
+        android:text="Open 2 "
+        android:textSize="22sp" />
 
 
 </LinearLayout>
